--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/Hongnodie/TenantsCount/issues"
   },
-  "homepage": "https://github.com/Hongnodie/TenantsCount#readme"
+  "homepage": "https://github.com/Hongnodie/TenantsCount#readme",
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
