--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/Hongnodie/TenantsCount#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mongoose": "^6.3.4"
