--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://Hongnodie:root@cluster0.xmxpa.mongodb.net/pin?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://Hongnodie:root@cluster0.xmxpa.mongodb.net/TenantsCount?retryWrites=true&w=majority
