--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,2 @@
 MONGO_URL = mongodb+srv://Hongnodie:root@cluster0.xmxpa.mongodb.net/TenantsCount?retryWrites=true&w=majority
+SECRET_KEY = "nodieanymore"
