--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,3 @@
 MONGO_URL = mongodb+srv://Hongnodie:root@cluster0.xmxpa.mongodb.net/TenantsCount?retryWrites=true&w=majority
 SECRET_KEY = "nodieanymore"
+TOEKN_EXPIRE = "2h"
