--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node Server/index.js --ignore Client",
     "build": "cd Client && npm run build",
-    "install": "cd server && npm i && cd ../client && npm i"
+    "install": "cd Server && npm i && cd ../Client && npm i"
   },
   "repository": {
     "type": "git",
