--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "tenantscount",
   "version": "1.0.0",
+  
   "description": "This project does not have a mongoDB connection setup. Setup the connection based on the environments below.\r - local development: create a config file (make sure to name it config.js) in the config folder, which exports your db.uri connection. An example is provided, config/config.example.js. This file will be ignored by git so your db credentials will be kept safe when the app is deployed.\r - production: Since the config file is not pushed when you deploy your app, you must specifiy your db uri in heorku. Set the uri in heroku as specified in [this](https://devcenter.heroku.com/articles/config-vars) resource. Make sure you name the environement variable \"DB_URI\".",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node Server/index.js --ignore Client",
-    "build": "cd Client && npm run build",
-    "install": "cd Server && npm i && cd ../Client && npm i"
+    "install": "cd Server && npm i"
   },
   "repository": {
     "type": "git",
