--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node Server/index.js --ignore Client",
-    "install": "cd Server && npm i"
+    "install": "cd Server && npm i && cd ../Client && npm i",
+    "build": "cd Client && npm run build"
   },
   "repository": {
     "type": "git",
